# probability-cup-forecaster

./: .env.example  .gitignore  GROLL_PLAN.md  PAPER.md  PLAN.md  README.md  backtest.py  betfair_check.py  champion_forecast.py  config.yaml  groll_eval.py  live.py  market_backtest.py  model_compare.py  paper.py  paper_eval.py  pyproject.toml
paper/: news_coefficients.json  results.json
probability_cup/: __init__.py  base_rates.py  client.py  forecast.py
scripts/: calibrate_news_layer.py  market_edge_decomposition.py  scrape_wc2022_odds.py  scrape_wc2026_odds.py
tests/: test_backtest.py  test_betfair.py  test_groll.py  test_lineup_adjust.py  test_models.py  test_probability_cup.py  test_smoke.py  test_tournament.py
wc_trader/: __init__.py  config.py  experiment.py  types.py
wc_trader/adapters/: base.py  betfair.py  paper.py
wc_trader/backtest/: __init__.py  bracket.py  compare.py  market.py  metrics.py  simulator 2.py  simulator.py  tournament.py
wc_trader/data/: __init__.py  fifa_rank.py  lineups.py  odds.py  results.py  wc_meta.py  worldbank.py
wc_trader/engine/: executor.py  risk.py
wc_trader/model/: __init__.py  base.py  dixon_coles.py  elo.py  groll_rf.py  lineup_adjust.py
wc_trader/strategy/: value.py
