[project]
name = "wc-trader"
version = "1.0.0"
description = "Replication of Groll et al. (2019) hybrid random forest, tested on the 2022 and 2026 FIFA World Cups"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
